# ecosystem

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
assets/: ecosystem.blend  es.assets.ron  world.glb  world.gltf
bevy_ecosystem_simulation/: Cargo.toml
bevy_ecosystem_simulation/src/: lib.rs  plugin.rs
bevy_ecosystem_simulation/src/feature/: component.rs  mod.rs
bevy_ecosystem_simulation/src/util/: mod.rs  plugin.rs
docs/: .$design.drawio.bkp  .$design.drawio.dtmp  design.drawio  design.md
examples/: predator_prey.rs
examples/predator_prey/: Cargo.toml
examples/predator_prey/src/: main.rs
src/: lib.rs  main.rs  plugin.rs  util.rs
src/app/: consts.rs  mod.rs  plugin.rs  resource.rs  state.rs
src/camera/: component.rs  plugin.rs  system.rs
src/environment/: mod.rs  plugin.rs  system.rs
src/feature/: component.rs  mod.rs  plugin.rs  system.rs
src/menu/: component.rs  layout.rs  mod.rs  plugin.rs  state.rs  system.rs
src/simulation/: component.rs  mod.rs  plugin.rs  state.rs  system.rs
src/simulation/camera/: component.rs  mod.rs  plugin.rs  system.rs
src/simulation/environment/: component.rs  mod.rs  plugin.rs  system.rs
src/simulation/rabbit/: component.rs  plugin.rs  system.rs
src/util/: mod.rs
src/window/: mod.rs  plugin.rs  system.rs
