[package]
name = "ecosystem"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
type_complexity = "allow"

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_core_pipeline",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "multi_threaded",
    "serialize",
    "tonemapping_luts",
    "wayland",
    "x11"
] }

