[package]
name = "ecosystem"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
type_complexity = "allow"

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_core_pipeline",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "multi_threaded",
    "serialize",
    "tonemapping_luts",
    "wayland",
    "x11"
] }
bevy_atmosphere = { version = "0.10" }
bevy_editor_pls = { version = "0.9" }
bevy_pkv = { version = "0.11" }
leafwing-input-manager = { version = "0.14" }
rand = { version = "0.8" }
noise = { version = "0.9" }

[patch.crates-io]
bevy_editor_pls = { git = "https://github.com/zhaop/bevy_editor_pls.git", branch = "bevy-0.14" }

